# MASS-AI-Project

./: .gitignore  BASLANGIC_NOTU.txt  BUILD_DESKTOP_EXE.bat  INSTALL_REQUIREMENTS.bat  LICENSE  MASS_AI_LAUNCHER.py  PROJE_ICIN_YAPILACAKLAR_RAPORU.md  README.md  RUN_SMOKE_TESTS.bat  START_MASS_AI.bat  START_MASS_AI_DESKTOP.bat  START_MASS_AI_WEB.bat  index.html  script.js  styles.css
business_docs/: MASS_AI_EDAS_Pilot_Deck.pptx
business_docs/project_research/: MASS-AI_Full_Paper.docx  MASS-AI_IEEE_Paper.docx  MASS-AI_Sunum.pptx
docs/: BASLANGIC_NOTU.txt  CANONICAL_TELEMETRY_SCHEMA.md  DAY1_ALIGNMENT.md  MASS_AI_MANUSCRIPT_DRAFT.md  PILOT_CHECKLIST.md  PROJECT_LAYOUT.md  SPRINT2_ARCHITECTURE.md  SPRINT_PROGRESS.md
images/: README.md
new_web/: START_MASS_AI_WEB.bat
new_web/dashboard/: app.py
new_web/site/: script.js
old_desktop/: BUILD_DESKTOP_EXE.bat  START_MASS_AI_DESKTOP.bat  mass_ai_desktop.py  ui_kit.py
old_desktop/packaging/: MASS_AI_Desktop.spec
project/: README.md  app_metadata.py  app_prefs.py  mass_ai_desktop.py  mass_ai_domain.py  mass_ai_engine.py  ops_store.py  requirements-full.txt  requirements.txt  support_bundle.py
project/archive/: README.md
project/core/: mass_ai_engine.py  ops_store.py
project/dashboard/: app.py  ui_helpers.py
project/legacy_pipeline/: advanced_modules.py  generate_synthetic_data.py  lstm_autoencoder.py  production_modules.py  run_pipeline.py  (+1 more)
project/realtime_ingest/feature_engine/: Cargo.toml  pyproject.toml
project/realtime_ingest/feature_engine/src/: lib.rs
shared/: README.md  requirements.txt
(+41 files in other folders)
