[build-system]
requires      = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name            = "feature_engine"
version         = "0.1.0"
description     = "MASS-AI high-performance feature engineering — Rust/PyO3"
requires-python = ">=3.8"

[tool.maturin]
features        = ["pyo3/extension-module"]
# Target the native CPU so LLVM can emit AVX2/AVX-512 where available.
rustc-args      = ["-C", "target-cpu=native"]
